Move browserify dep to devDependencies and note global transforms.

--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "innersource": "0.0.2",
     "detective": "~2.2.0",
     "inline-source-map": "~0.2.5",
-    "combine-source-map": "~0.2.0",
-    "browserify": "~3.31.2"
+    "combine-source-map": "~0.2.0"
   },
   "devDependencies": {
     "jshint": "~2.1.11",
     "convert-source-map": "~0.2.6",
-    "coffeeify": "~0.5.2"
+    "coffeeify": "~0.5.2",
+    "browserify": ">=3.0.0"
   },
   "peerDependencies": {
     "browserify": ">=3.0.0"
