Update detective to latest version
Detective 2.x uses an old version of Esprima for parsing the files, this
unforunately does not support ES6 syntax (I specifically had problems
with template strings). The latest version of detective uses acorn which
does support template strings correctly.

Also updated the test to work in a later version of browserify as the
output from bundle and the place into which to pass the `debug`
parameter have moved.

(Also hi!)

--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
   "author": "John K. Paul",
   "license": "MIT",
   "dependencies": {
-    "through": "~2.2.7",
-    "innersource": "0.0.2",
-    "detective": "~2.2.0",
+    "combine-source-map": "~0.2.0",
+    "detective": "~4.2.0",
     "inline-source-map": "~0.2.5",
-    "combine-source-map": "~0.2.0"
+    "innersource": "0.0.2",
+    "through": "~2.2.7"
   },
   "devDependencies": {
     "jshint": "~2.1.11",
